@@ -384,11 +384,11 @@
             variable=temp_starting_location
         [/store_starting_location]
         [store_locations]
-            x,y=$temp_starting_location.x,$temp_starting_location.y
-            radius={RADIUS}
             #all the types of villages
+            terrain=Ha^Vhha, Hh^Vhh, Dd^Vda, Mm^Vhh, Uu^Vu, Aa^Vea, Gs^Vht, Uu^Vud, Gg^Ve, Dd^Vdt, Gg^Vh, Aa^Vha, Ww^Vm, Ss^Vhs, Ss^Vm
             [and]
-                terrain=Ha^Vhha, Hh^Vhh, Dd^Vda, Mm^Vhh, Uu^Vu, Aa^Vea, Gs^Vht, Uu^Vud, Gg^Ve, Dd^Vdt, Gg^Vh, Aa^Vha, Ww^Vm, Ss^Vhs, Ss^Vm
+                x,y=$temp_starting_location.x,$temp_starting_location.y
+                radius={RADIUS}
             [/and]
             variable=temp_starting_locs
         [/store_locations]
@@ -416,10 +416,10 @@
         name=prestart
 
         [store_locations]
-            x,y={X},{Y}
-            radius={RADIUS}
+            terrain=*^V*
             [and]
-                terrain=*^V*
+                x,y={X},{Y}
+                radius={RADIUS}
             [/and]
             variable=temp_starting_villages_area
         [/store_locations]
